# VMware-NSX-Security

./: .env.example  .gitignore  Dockerfile  README-CN.md  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
examples/mcp-configs/: claude-code.json  cursor.json  goose.json
mcp_server/: __init__.py  __main__.py  _shared.py  server.py
mcp_server/tools/: __init__.py  dfw_policy.py  dfw_rules.py  groups.py  idps.py  tags.py  traceflow.py
skills/vmware-nsx-security/: SKILL.md
skills/vmware-nsx-security/evals/: evals.json
skills/vmware-nsx-security/references/: capabilities.md  cli-reference.md  setup-guide.md
tests/: test_no_destructive_ops.py  test_sanitize.py
tests/eval/regression/: test_cli_and_tool_fixes.py  test_env_secret_obfuscation.py  test_error_handling.py  test_init_and_onboarding.py  test_nsx_security_specific.py  test_release_blockers.py
vmware_nsx_security/: __init__.py  cli.py  config.py  connection.py  doctor.py  init_wizard.py
vmware_nsx_security/notify/: audit.py
vmware_nsx_security/ops/: __init__.py  _paginate.py  _validate.py  dfw_policy.py  dfw_rules.py  idps.py  security_group.py  tags.py  traceflow.py
